# Ideas-and-Templates

./: BFS_HoleFinder.cpp  BinaryOperationsExample.cpp  FlutterWithouthAndroidStudio.md  Knights_Tour.cpp  OperatorOverloading.cpp  Pravci.h  README.md  SDL2 Cmake.txt  SDL2_OpenGL_Window.cpp  SFML Flip Y Axis.txt  ToggleKey.h  VectorErase.txt  joerc  sResourceManager.h  typescript prop types.txt
CMake-CPP-Template/: README.md
CMake-CPP-Template/example/: CMakeLists.txt  main.cpp
CMake-SFML-Template/: CMakeLists.txt  README.md  main.cpp
CMake_SDL2_GL/: CMakeLists.txt
CMake_SDL2_GL/src/: main.cpp
MatrixMultiplication/: main.cpp  matrix.h
OnlinePongSFMLTemplate/Client/: app  compile.sh  main.cpp  mihaSimpleSFML.h
OnlinePongSFMLTemplate/Server/: app  compile.sh  main.cpp  server.cpp  server.hpp
OpenGL/Simple_Quad/: main.cpp
OpenGL/ThinMatrix_OpenGL_Tutorial/: Display_Manager.cpp  Display_Manager.h  Loader.cpp  Loader.h  RawModel.cpp  RawModel.h  Renderer.cpp  Renderer.h  ShaderProgram.h  StaticShader.h  main.cpp
Panning and Zooming SFML/: main.cpp
Panning_and_zooming_Math/: main.cpp  util.h
SDL2 template/: CMakeLists.txt  main.cpp
SFML StringMapToScreen Template/: main.cpp
SplinesSFML/: main.cpp
StringMapToScreen RougeLikeApp SFML Example/: RougeLikeApp.cpp  RougeLikeApp.h  game.cpp  game.h  main.cpp
ThreadsCPP/: thread_example.cpp
Vector Template SFML/: main.cpp
ZoomingJS/: index.html  main.js
gl/: glObjects.cpp  glObjects.h  stb_image.h
glObjects/: glObjects.h
webAudioExample/: index.html  mihaSimpleCanvas.js  webAudioVisualizer.js
(+32 files in other folders)
